--- a/Ionic_App/www/templates/dashboard.html
+++ b/Ionic_App/www/templates/dashboard.html
@@ -17,6 +17,9 @@
       <button class="button button-full button-assertive" ng-click="performInvalidRequest()">
         Make Request without valid token
       </button>
+      <button class="button button-full button-positive" ng-click="performFingerprint()">
+        Fingerprint
+      </button>
       <br><br>
       {{response}}
     </div></div>
