--- a/Ionic_App/www/templates/main.html
+++ b/Ionic_App/www/templates/main.html
@@ -1,15 +1,20 @@
 <ion-view>
+  <div class="bar bar-header">
+  <button class="button button-icon icon ion-navicon"></button>
+  <div class="h1 title">Header Buttons</div>
+  <button class="button button-clear button-positive">Edit</button>
+</div>
   <ion-tabs class="tabs-icon-top tabs-balanced">
 
-    <ion-tab title="Dashboard" icon="ion-home" href="#/main/dash">
+    <ion-tab title="Chat" icon="ion-chatboxes" href="#/main/dash">
       <ion-nav-view name="dash-tab"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Public" icon="ion-earth" href="#/main/public">
+    <ion-tab title="Friends" icon="ion-person-stalker" href="#/main/public">
       <ion-nav-view name="public-tab"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Secret" icon="ion-nuclear" href="#/main/admin">
+    <ion-tab title="Settings" icon="ion-android-settings" href="#/main/admin">
       <ion-nav-view name="admin-tab"></ion-nav-view>
     </ion-tab>
 
